--- a/asset/css/long.css
+++ b/asset/css/long.css
@@ -451,6 +451,151 @@ height: 30px;
 .setting-color-product .mg-auto{
 	margin: auto;
 }
+.maxheight-810{
+	max-height: 810px;
+}
+/* CSS Dự Án */
+.banner-du-an{
+	position: relative;
+}
+.title-banner-du-an{
+	padding-bottom: 58px;
+	color: #fff;
+}
+.title-banner-du-an h1 {
+    font-size: 52px;
+}
+.title-banner-du-an p {
+    margin-top: 20px;
+    font-size: 18px;
+}
+.linear-background--banner-duan{
+	background: linear-gradient(180deg,transparent 2.52%,rgba(0,0,0,.7));
+}
+.mg-top-88{
+	margin-top: 88px;
+}
+.mg-bottom-56{
+	margin-bottom: 56px;
+}
+.mg-top-8{
+	margin-top: 8px;
+}
+.text-gray-600 {
+    --tw-text-opacity: 1;
+    color: rgba(112, 112, 112, var(--tw-text-opacity));
+}
+.grid-colum-3{
+	grid-template-columns: repeat(3 , minmax(0, 1fr));
+}
+.gap-32{
+	gap: 32px;
+}
+.setting-intro-du-an .intro-du-an{
+	padding: 0px 17px;
+}
+.setting-intro-du-an{
+	line-height: 1.5;
+}
+.block{
+	display: block;
+}
+.img-du-an img{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+.hinh-anh-masp{
+	text-align: center;
+}
+.mg-topbottom-56{
+	margin: 56px 0px;
+}
+.border-gap{
+	border-top: 1px solid #D9DADB;
+}
+.text-intro-du-an{
+	width: 70%;
+    margin: auto;
+    line-height: 1.5;
+}
+.swiper {
+
+  }
+  .setting-list-img img{
+
+	height: 100%;
+	object-fit: cover;
+	position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
+  .aspect-h-2 {
+    --tw-aspect-h: 2;
+}
+.aspect-w-3 {
+    --tw-aspect-w: 3;
+	position: relative;
+    padding-bottom: 60%;
+}
+.swiper {
+	/* width: 100%; */
+	padding-top: 50px;
+	padding-bottom: 50px;
+  }
+  
+  .swiper-wrapper {
+	padding-left: initial;
+	margin: 0;
+  }
+  
+  .swiper-slide {
+	text-align: center;
+	font-size: 18px;
+	background: #fff;
+	width: 500px;
+	height: 300px;
+	display: flex;
+	align-items: center;
+  }
+  .swiper-wrapper .swiper-slide:hover{
+	scale: 1.05;
+  }
+  .transition-0-3{
+	transition: all 0.3s !important;
+  }
+  .center-text{
+    top: calc(29% + 40px);
+    --tw-translate-y: -50%;
+    transform:rotate(-90deg);
+
+  }
+  .right-6rem{
+	right: -6rem;
+  }
+  .banner-text-responsive{
+	font-size: 140px;
+  }
+  .text-stroke{
+	-webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #fff;
+  }
+  .h-100{
+	height: 100vh !important;
+  }
+  .banner-du-an img{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+  }
+  @media (max-width:1440px){
+	.banner-text-responsive {
+		font-size: 120px !important;
+	}
+  }
 @media (max-width: 1400px){
 .container {
     max-width: 1024px;
@@ -479,6 +624,9 @@ height: 30px;
 		padding-right: 1rem;
 		padding-left: 1rem;
 	}
+	.setting-text-banner-rotate{
+		display: none;
+	}
 	.banner-product{
 		max-height: 80vh;
 		height: 100vh;
@@ -505,8 +653,8 @@ height: 30px;
 	.nav-list-product-two .accordion-body .gap-16{
 		gap: 9px;
 	}
-	.setting-product .product-select-laptop{
-
+	.aspect-w-3{
+		padding-bottom: 70%;
 	}
 }
 /* @media (min-width:425px){
@@ -575,6 +723,18 @@ height: 30px;
 	.nav-list-product-two .accordion-body{
 		padding: 20px;
 	}
+	.setting-intro-du-an{
+		display: block;
+	}
+	.text-intro-du-an{
+		width: 100%;
+	}
+	.swiper-button-next , .swiper-button-prev{
+		display: none !important;
+	}
+	.title-banner-du-an h1 {
+		font-size: 36px;
+	}
 
 }
 
@@ -582,6 +742,13 @@ height: 30px;
 	.container{
 		max-width: 420px;
 	}
+	.title-banner-du-an h1 {
+		font-size: 24px;
+	}
+	.title-banner-du-an p {
+		font-size: 16px;
+	}
+
 }
 
 
