--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1047,6 +1047,80 @@ img{
 
 }
 
+/* Tin tức chi tiết */
+#section-news-content .news-content-inner{
+    margin: auto;
+}
+
+#section-news-content{
+    padding-top: 180px;
+    margin-bottom: 64px;
+}
+
+#section-news-content .news-content-inner .news-category{
+    text-align: center;
+    color: #707070;
+    font-size: 20px;
+}
+
+#section-news-content .news-content-inner .news-title{
+    text-align: center;
+    max-width: 624px;
+    line-height: 130%;
+    margin: auto;
+    margin-top: 16px;
+    font-weight: bold;
+    font-size: 48px;
+}
+
+#section-news-content .news-content-inner .news-date{
+    font-size: 16px;
+    margin-top: 8px;
+    text-align: center;
+}
+
+#section-news-content .news-content-inner .news-detail{
+    margin-bottom: 48px;
+    font-weight: 400;
+    font-size: 16px;
+    color: #121212; 
+    line-height: 1.75;
+    margin-top: 8px;
+}
+
+#section-news-content .news-share{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+#section-news-content .news-share p{
+    margin-right: 32px;
+}
+
+#section-news-content .news-share a{
+    font-size: 25px;
+    margin-left: 10px;
+    color:#707070;
+    transition: all 0.3s linear;
+}
+
+#section-news-content .news-share a:hover{
+    color:#E56400;
+    transition: all 0.3s linear;
+
+}
+
+/* Thông tin liên quan */
+#section-news-other .news-other-title {
+    text-align: center;
+    font-size: 32px;
+    margin-bottom: 29px;
+}
+
+#section-news-other{
+    margin-bottom: 128px;
+}
 
 
 
@@ -1105,7 +1179,7 @@ img{
 
 @media (max-width: 425px){
     #header-menu .navbar>.container{
-        padding: 0;
+        /* padding: 0; */
     }
 
     #header-menu .navbar-nav{
@@ -1160,8 +1234,20 @@ img{
     .cart-left-heading p:first-child {
         width: 74%;
     }
-    
 
+    /* chi tiet tin tuc */
+    #section-news-content .news-content-inner .news-title{
+        font-size: 19px;
+    }
+
+    #section-news-content {
+        padding-top: 180px;
+        padding-top: 19px;
+    }
+
+    #section-news-other{
+        margin-bottom: 60px;
+    }
 }
 
 
